<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/stroke_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_enable_stroke" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_editor_stroke_width" />

    <SeekBar
        android:id="@+id/stroke_width_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_editor_stroke_color" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stroke_color_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="6"
        tools:listitem="@layout/item_color_button" />

</LinearLayout> 
