<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.SelectionActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/photo_editor"
        android:textColor="@color/white"
        android:textSize="@dimen/size_28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/optionsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_24dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/distance_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <androidx.cardview.widget.CardView
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/distance_120dp"
            android:layout_marginHorizontal="@dimen/distance_12dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/indigo"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/distance_16dp">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/camera_icon"
                    android:src="@android:drawable/ic_menu_camera"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/camera"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/editImageButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/distance_120dp"
            android:layout_marginHorizontal="@dimen/distance_12dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/distance_16dp">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:contentDescription="@string/edit_image_icon"
                    android:src="@android:drawable/ic_menu_gallery"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/edit_image"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/galleryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_24dp"
        android:layout_marginTop="@dimen/distance_24dp"
        android:text="@string/recent_photos"
        android:textColor="@color/white"
        android:textSize="@dimen/size_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/galleryRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/distance_16dp"
        android:paddingHorizontal="@dimen/distance_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryTitle"
        tools:listitem="@layout/item_gallery_image" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsContainer"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
