<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCamera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.camera.CameraFragment">

    <!-- Main container for preview, filter and overlay -->
    <FrameLayout
        android:id="@+id/previewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Raw camera video layer -->
        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitCenter" />

        <!-- Filtered video display layer -->
        <jp.co.cyberagent.android.gpuimage.GPUImageView
            android:id="@+id/gpuView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <!-- Grid layer -->
        <com.example.dungappedit.ui.camera.GridOverlayView
            android:id="@+id/gridOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Sticker drawing layer (important: must be last to draw on top) -->
        <com.example.dungappedit.ui.camera.stikcer.FaceStickerOverlayView
            android:id="@+id/faceStickerOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </FrameLayout>

    <!-- Left function buttons -->
    <ImageButton
        android:id="@+id/imgBtnFlas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_20dp"
        android:layout_marginTop="@dimen/distance_20dp"
        android:background="@drawable/onflas"
        android:contentDescription="@string/camera_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Right function buttons -->
    <ImageButton
        android:id="@+id/imgBtnTimerAndRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20dp"
        android:layout_marginEnd="@dimen/distance_20dp"
        android:background="@drawable/setting"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20dp"
        android:background="@drawable/rotate"
        android:contentDescription="@string/camera_icon"
        app:layout_constraintStart_toStartOf="@+id/imgBtnTimerAndRatio"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnTimerAndRatio" />

    <ImageButton
        android:id="@+id/imgBtnBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20dp"
        android:background="@drawable/brightness"
        android:contentDescription="@string/brightness_reset"
        app:layout_constraintStart_toStartOf="@+id/imgBtnRotate"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnRotate" />

    <ImageButton
        android:id="@+id/imgBtnGrit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20dp"
        android:background="@drawable/grid"
        android:contentDescription="@string/frame_ratio"
        app:layout_constraintStart_toStartOf="@+id/imgBtnBrightness"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnBrightness" />

    <ImageButton
        android:id="@+id/imgBtnFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_20dp"
        android:background="@drawable/iconface"
        app:layout_constraintStart_toStartOf="@+id/imgBtnGrit"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnGrit" />

    <!-- Popup layouts (brightness, timer, ratio) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/brightnessControlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_32dp"
        android:layout_marginEnd="@dimen/distance_32dp"
        android:layout_marginBottom="@dimen/distance_30dp"
        android:background="@drawable/brightness_slider_background"
        android:padding="@dimen/distance_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- Content for brightness control -->
        <ImageView
            android:id="@+id/brightnessDarkIcon"
            android:layout_width="@dimen/distance_24dp"
            android:layout_height="@dimen/distance_24dp"
            android:contentDescription="@string/brightness_reset"
            android:src="@drawable/brightness_high"
            app:layout_constraintBottom_toBottomOf="@+id/brightnessSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/brightnessSeekBar" />

        <SeekBar
            android:id="@+id/brightnessSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_8dp"
            android:layout_marginEnd="@dimen/distance_8dp"
            android:max="100"
            android:minHeight="@dimen/distance_30dp"
            android:paddingTop="@dimen/distance_10dp"
            android:paddingBottom="@dimen/distance_10dp"
            android:progress="50"
            android:progressDrawable="@drawable/brightness_seekbar_progress"
            android:thumb="@drawable/brightness_seekbar_thumb"
            app:layout_constraintEnd_toStartOf="@+id/brightnessLightIcon"
            app:layout_constraintStart_toEndOf="@+id/brightnessDarkIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/brightnessLightIcon"
            android:layout_width="@dimen/distance_24dp"
            android:layout_height="@dimen/distance_24dp"
            android:contentDescription="@string/brightness_reset"
            android:src="@drawable/brightness_low"
            app:layout_constraintBottom_toBottomOf="@+id/brightnessSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/brightnessSeekBar" />

        <Button
            android:id="@+id/btnResetBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:background="@drawable/reset_button_background"
            android:text="@string/default_value"
            android:textColor="@color/white"
            android:textSize="@dimen/size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brightnessSeekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerRatioContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_32dp"
        android:layout_marginTop="@dimen/distance_50dp"
        android:layout_marginEnd="@dimen/distance_32dp"
        android:background="@drawable/brightness_slider_background"
        android:padding="@dimen/distance_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Content for timer/ratio control -->
        <TextView
            android:id="@+id/txtTimerRatioTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_16dp"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/distance_8dp"
            android:paddingBottom="@dimen/distance_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTimerRatioTitle"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="fill"
            app:tabIndicatorHeight="@dimen/distance_0dp"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabPadding="@dimen/distance_0dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/white" />

        <TextView
            android:id="@+id/txtRatioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_16dp"
            android:text="@string/frame_ratio"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabTimer" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:background="@android:color/transparent"
            android:paddingTop="@dimen/distance_8dp"
            android:paddingBottom="@dimen/distance_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRatioLabel"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="fill"
            app:tabIndicatorHeight="@dimen/distance_0dp"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabPadding="@dimen/distance_0dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:tabTextColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container for Filter and Sticker tabs -->
    <FrameLayout
        android:id="@+id/bottomTabsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnCapture">

        <!-- Filter tab (default) -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:tabBackground="@android:color/transparent"
            app:tabGravity="fill"
            app:tabIndicator="@null"
            app:tabMinWidth="@dimen/tab_min_width"
            app:tabMode="scrollable"
            app:tabPaddingEnd="@dimen/distance_8dp"
            app:tabPaddingStart="@dimen/distance_8dp"
            app:tabRippleColor="@null" />

        <!-- Sticker tab (hidden by default) -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabSticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:tabBackground="@android:color/transparent"
            app:tabGravity="fill"
            app:tabIndicator="@null"
            app:tabMinWidth="@dimen/tab_min_width"
            app:tabMode="scrollable"
            app:tabPaddingEnd="@dimen/distance_8dp"
            app:tabPaddingStart="@dimen/distance_8dp"
            app:tabRippleColor="@null" />

    </FrameLayout>

    <!-- Main controls at the bottom -->
    <ImageButton
        android:id="@+id/imgBtnAlbum"
        android:layout_width="@dimen/distance_50dp"
        android:layout_height="@dimen/distance_50dp"
        android:layout_marginStart="@dimen/distance_10dp"
        android:background="@drawable/itemfilter"
        android:contentDescription="@string/edit_image_icon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/imgBtnCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnCapture" />

    <ImageButton
        android:id="@+id/imgBtnCapture"
        android:layout_width="@dimen/distance_72dp"
        android:layout_height="@dimen/distance_72dp"
        android:layout_marginBottom="@dimen/distance_50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/camera"
        android:elevation="@dimen/distance_elevation_2dp"
        android:src="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timerCountDown"
        android:layout_width="@dimen/distance_48dp"
        android:layout_height="@dimen/distance_48dp"
        android:layout_margin="@dimen/distance_16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
